--- a/generate.jsonc
+++ b/generate.jsonc
@@ -1,365 +1,368 @@
-{"channels": [
-    // Категория: общение
-    // Цвет: Белый Иконка: #FFFFFF
-    {
-        "id": 1014801129361641562,
-        "svg": "./svg/chat",
-        "name": "Чат"
-    },
-    {
-        "id": 1232421428192874576,
-        "svg": "./svg/language",
-        "name": "Other languages"
-    },
-    {
-        "id": 1128740027057319966,
-        "svg": "./svg/users",
-        "name": "Чат друзей"
-    },
-    {
-        "id": 1015591992027250749,
-        "svg": "./svg/console",
-        "name": "Кодинг"
-    },
-    {
-        "id": 1015572606646231070,
-        "svg": "./svg/laugh",
-        "name": "Мемы"
-    },
-    {
-        "id": 1169751638785921156,
-        "svg": "./svg/warning",
-        "name": "Суд"
-    },
-    {
-        "id": 1015572072279310348,
-        "svg": "./svg/bot",
-        "name": "Боты"
-    },
-    {
-        "id": 1015572192429350923,
-        "svg": "./svg/book",
-        "name": "Не модерируется"
-    },
-    {
-        "id": 1101608762453798996,
-        "svg": "./svg/18+",
-        "name": "Nsfw"
-    },
-    {
-        "id": 1030904286143590470,
-        "svg": "./svg/up",
-        "name": "Бампы"
-    },
-    {
-        "id": 1195786774035832883,
-        "svg": "./svg/secure",
-        "name": "Чат админов"
-    },
-    {
-        "id": 1031243482813186100,
-        "svg": "./svg/forum",
-        "name": "Форум"
-    },
-    // Категория: Информация
-    // Цвет: Оранжевый Иконка: #FFA726 текст: #FFB74D
-    {
-        "id": 1015346516807929927,
-        "svg": "./svg/orange/rules",
-        "name": "Правила",
-        "color": "#FFB74D"
-    },
-    {
-        "id": 1015571820654624829,
-        "svg": "./svg/orange/news",
-        "name": "Новости",
-        "color": "#FFB74D"
-    },
-    {
-        "id": 1103314520031637515,
-        "svg": "./svg/orange/next",
-        "name": "Спойлеры",
-        "color": "#FFB74D"
-    },
-    {
-        "id": 1166732314349404291,
-        "svg": "./svg/orange/info",
-        "name": "Каналы и роли",
-        "color": "#FFB74D"
-    },
-    {
-        "id": 1015573724931563540,
-        "svg": "./svg/orange/users",
-        "name": "Приветствия",
-        "color": "#FFB74D"
-    },
-    {
-        "id": 1015957374965645353,
-        "svg": "./svg/orange/like",
-        "name": "Голосование",
-        "color": "#FFB74D"
-    },
-    {
-        "id": 1223806102576037900,
-        "svg": "./svg/orange/cowboy",
-        "name": "Персонажи",
-        "color": "#FFB74D"
-    },
-    {
-        "id": 1223786586207031326,
-        "svg": "./svg/orange/bell",
-        "name": "Актив",
-        "color": "#FFB74D"
-    },
-    {
-        "id": 1244692551894700154,
-        "svg": "./svg/orange/paint",
-        "name": "Тема",
-        "color": "#FFB74D"
-    },
-    // Статистика
-    // Цвет: Синий Иконка: #64B5F6 Текст: #4FC3F7
-    {
-        "id": 1154400124911505560, // цель
-        "svg": "./svg/blue/target",
-        "color": "#4FC3F7"
-    },
-    {
-        "id": 1016036689350754414, // люди
-        "svg": "./svg/blue/users",
-        "color": "#4FC3F7"
-    },
-    {
-        "id": 1016036693557641337, // боты
-        "svg": "./svg/blue/bot",
-        "color": "#4FC3F7"
-    },
-    // Модерация
-    // Цвет: Фиолетовый Иконка: #BA68C8 Текст: #B39DDB
-    {
-        "id": 1015581047326507008,
-        "svg": "./svg/purple/audit",
-        "name": "Аудит",
-        "color": "#B39DDB"
-    },
-    {
-        "id": 1198045403396984932,
-        "svg": "./svg/purple/ban",
-        "name": "Мод аудит",
-        "color": "#B39DDB"
-    },
-    {
-        "id": 1152974453446279178,
-        "svg": "./svg/purple/angry",
-        "name": "Наказания",
-        "color": "#B39DDB"
-    },
-    {
-        "id": 1155117852509089802,
-        "svg": "./svg/purple/system",
-        "name": "Система",
-        "color": "#B39DDB"
-    },
-    {
-        "id": 1015579621665804372,
-        "svg": "./svg/purple/chat",
-        "name": "Общение",
-        "color": "#B39DDB"
-    },
-    // LightBot
-    // Цвет: Зелёный Иконка: #8BC34A Текст: #81C784
-    {
-        "id": 1158404262477451355,
-        "svg": "./svg/green/news",
-        "name": "Новости",
-        "color": "#81C784"
-    },
-    {
-        "id": 1158405424731664394,
-        "svg": "./svg/green/update",
-        "name": "Обновления",
-        "color": "#81C784"
-    },
-    {
-        "id": 1157698685791113326,
-        "svg": "./svg/green/status",
-        "name": "Статус",
-        "color": "#81C784"
-    },
-    {
-        "id": 1116095405671858376,
-        "svg": "./svg/green/logs",
-        "name": "LightBot логи",
-        "color": "#81C784"
-    },
-    {
-        "id": 1104785407163506728,
-        "svg": "./svg/green/radiation",
-        "name": "LightBot бета",
-        "color": "#81C784"
-    },
-    // Войсы
-    // Цвет: Серый Иконка: #E0E0E0 Текст: #9E9E9E
-    {
-        "id": 1015704816430882816,
-        "svg": "./svg/gray/switch",
-        "name": "Интерфейс",
-        "color": "#9E9E9E"
-    },
-    {
-        "id": 1015704814962880563,
-        "svg": "./svg/gray/add",
-        "name": "Создать войс",
-        "color": "#9E9E9E"
-    },
-    {
-        "id": 1102929801272098826,
-        "svg": "./svg/gray/sleeping",
-        "name": "Афк",
-        "color": "#9E9E9E"
-    },
-    // Категории
-    // Цвета: Цвета иконок
-    {
-        "id": 1015704813775896586,
-        "svg": "./svg/console",
-        "name": "Голосовые",
-        "color": "#E0E0E0"
-    },
-    {
-        "id": 1015578928179597373,
-        "svg": "./svg/console",
-        "name": "Модерация",
-        "color": "#BA68C8"
-    },
-    {
-        "id": 1016036681847156894,
-        "svg": "./svg/console",
-        "name": "Статистика",
-        "color": "#64B5F6"
-    },
-    {
-        "id": 1015571577330487296,
-        "svg": "./svg/console",
-        "name": "Информация",
-        "color": "#FFA726"
-    },
-    {
-        "id": 1015571353744715867,
-        "svg": "./svg/console",
-        "name": "Общение",
-        "color": "#FFFFFF"
-    },
-    {
-        "id": 1158403985921814548,
-        "svg": "./svg/console",
-        "name": "LightBot",
-        "color": "#8BC34A"
-    },
-    {
-        "id": 1198975336831004702,
-        "svg": "./svg/console",
-        "name": "Игровая",
-        "color": "#F44336"
-    },
-    {
-        "id": 1015576134626316310,
-        "svg": "./svg/console",
-        "name": "Другое",
-        "color": "#FFF59D"
-    },
-    // Игровая
-    // Цвет: Красный Иконка: #F44336 Текст: #E57373
-    {
-        "id": 1198975516078768160,
-        "svg": "./svg/red/text",
-        "name": "Слова",
-        "color": "#E57373"
-    },
-    {
-        "id": 1198975822678216724,
-        "svg": "./svg/red/count",
-        "name": "Считалка",
-        "color": "#E57373"
-    },
-    {
-        "id": 1198976336644026531,
-        "svg": "./svg/red/time",
-        "name": "6 часов чат",
-        "color": "#E57373"
-    },
-    {
-        "id": 1199032555404529765,
-        "svg": "./svg/red/note",
-        "name": "Заявки РП",
-        "color": "#E57373"
-    },
-    {
-        "id": 1198976532547391590,
-        "svg": "./svg/red/game",
-        "name": "РП",
-        "color": "#E57373"
-    },
-    {
-        "id": 1199032104546213898,
-        "svg": "./svg/red/18+",
-        "name": "РП (nsfw)",
-        "color": "#E57373"
-    },
-    // Другое
-    // Цвет: Желтый Иконка: #FFF59D Текст: #FFE082
-    {
-        "id": 1030894629312266321,
-        "svg": "./svg/yellow/bulb",
-        "name": "Идеи",
-        "color": "#FFE082"
-    },
-    {
-        "id": 1152973016985239633,
-        "svg": "./svg/yellow/shield_star",
-        "name": "Набор в модерацию",
-        "color": "#FFE082"
-    },
-    {
-        "id": 1031242016006340688,
-        "svg": "./svg/yellow/ad",
-        "name": "Авто партнёрство",
-        "color": "#FFE082"
-    },
-
-    // IdeaLight Beta
-    // Цвет: Светло красный Иконки: #FF8A80 Текст: #E57373
-    {
-        "id": 1167140443381846036,
-        "svg": "./svg/il_beta/rules",
-        "name": "Правила",
-        "color": "#E57373"
-    },
-    {
-        "id": 1167144896616992819,
-        "svg": "./svg/il_beta/spoilers",
-        "name": "Спойлеры",
-        "color": "#E57373"
-    },
-    {
-        "id": 1167144702894682175,
-        "svg": "./svg/il_beta/chat",
-        "name": "Чат",
-        "color": "#E57373"
-    },
-    {
-        "id": 1167862813423845456,
-        "svg": "./svg/il_beta/info",
-        "name": "Ресурсы",
-        "color": "#E57373"
-    },
-    {
-        "id": 1167858232409206954,
-        "svg": "./svg/il_beta/bot",
-        "name": "Чат бот",
-        "color": "#E57373"
-    }
-],"settings":
 {
-    "mute_icon": "./svg/mute"
-}}
+    "channels": [
+        // Категория: общение
+        // Цвет: Белый Иконка: #FFFFFF
+        {
+            "id": 1014801129361641562,
+            "svg": "./svg/chat",
+            "name": "Чат"
+        },
+        {
+            "id": 1232421428192874576,
+            "svg": "./svg/language",
+            "name": "Other languages"
+        },
+        {
+            "id": 1128740027057319966,
+            "svg": "./svg/users",
+            "name": "Чат друзей"
+        },
+        {
+            "id": 1015591992027250749,
+            "svg": "./svg/console",
+            "name": "Кодинг"
+        },
+        {
+            "id": 1015572606646231070,
+            "svg": "./svg/laugh",
+            "name": "Мемы"
+        },
+        {
+            "id": 1169751638785921156,
+            "svg": "./svg/warning",
+            "name": "Суд"
+        },
+        {
+            "id": 1015572072279310348,
+            "svg": "./svg/bot",
+            "name": "Боты"
+        },
+        {
+            "id": 1015572192429350923,
+            "svg": "./svg/book",
+            "name": "Не модерируется"
+        },
+        {
+            "id": 1101608762453798996,
+            "svg": "./svg/18+",
+            "name": "Nsfw"
+        },
+        {
+            "id": 1030904286143590470,
+            "svg": "./svg/up",
+            "name": "Бампы"
+        },
+        {
+            "id": 1195786774035832883,
+            "svg": "./svg/secure",
+            "name": "Чат админов"
+        },
+        {
+            "id": 1031243482813186100,
+            "svg": "./svg/forum",
+            "name": "Форум"
+        },
+        // Категория: Информация
+        // Цвет: Оранжевый Иконка: #FFA726 текст: #FFB74D
+        {
+            "id": 1015346516807929927,
+            "svg": "./svg/orange/rules",
+            "name": "Правила",
+            "color": "#FFB74D"
+        },
+        {
+            "id": 1015571820654624829,
+            "svg": "./svg/orange/news",
+            "name": "Новости",
+            "color": "#FFB74D"
+        },
+        {
+            "id": 1103314520031637515,
+            "svg": "./svg/orange/next",
+            "name": "Спойлеры",
+            "color": "#FFB74D"
+        },
+        {
+            "id": 1166732314349404291,
+            "svg": "./svg/orange/info",
+            "name": "Каналы и роли",
+            "color": "#FFB74D"
+        },
+        {
+            "id": 1015573724931563540,
+            "svg": "./svg/orange/users",
+            "name": "Приветствия",
+            "color": "#FFB74D"
+        },
+        {
+            "id": 1015957374965645353,
+            "svg": "./svg/orange/like",
+            "name": "Голосование",
+            "color": "#FFB74D"
+        },
+        {
+            "id": 1223806102576037900,
+            "svg": "./svg/orange/cowboy",
+            "name": "Персонажи",
+            "color": "#FFB74D"
+        },
+        {
+            "id": 1223786586207031326,
+            "svg": "./svg/orange/bell",
+            "name": "Актив",
+            "color": "#FFB74D"
+        },
+        {
+            "id": 1244692551894700154,
+            "svg": "./svg/orange/paint",
+            "name": "Тема",
+            "color": "#FFB74D"
+        },
+        // Статистика
+        // Цвет: Синий Иконка: #64B5F6 Текст: #4FC3F7
+        {
+            "id": 1154400124911505560, // цель
+            "svg": "./svg/blue/target",
+            "color": "#4FC3F7"
+        },
+        {
+            "id": 1016036689350754414, // люди
+            "svg": "./svg/blue/users",
+            "color": "#4FC3F7"
+        },
+        {
+            "id": 1016036693557641337, // боты
+            "svg": "./svg/blue/bot",
+            "color": "#4FC3F7"
+        },
+        // Модерация
+        // Цвет: Фиолетовый Иконка: #BA68C8 Текст: #B39DDB
+        {
+            "id": 1015581047326507008,
+            "svg": "./svg/purple/audit",
+            "name": "Аудит",
+            "color": "#B39DDB"
+        },
+        {
+            "id": 1198045403396984932,
+            "svg": "./svg/purple/ban",
+            "name": "Мод аудит",
+            "color": "#B39DDB"
+        },
+        {
+            "id": 1152974453446279178,
+            "svg": "./svg/purple/angry",
+            "name": "Наказания",
+            "color": "#B39DDB"
+        },
+        {
+            "id": 1155117852509089802,
+            "svg": "./svg/purple/system",
+            "name": "Система",
+            "color": "#B39DDB"
+        },
+        {
+            "id": 1015579621665804372,
+            "svg": "./svg/purple/chat",
+            "name": "Общение",
+            "color": "#B39DDB"
+        },
+        // LightBot
+        // Цвет: Зелёный Иконка: #8BC34A Текст: #81C784
+        {
+            "id": 1158404262477451355,
+            "svg": "./svg/green/news",
+            "name": "Новости",
+            "color": "#81C784"
+        },
+        {
+            "id": 1158405424731664394,
+            "svg": "./svg/green/update",
+            "name": "Обновления",
+            "color": "#81C784"
+        },
+        {
+            "id": 1157698685791113326,
+            "svg": "./svg/green/status",
+            "name": "Статус",
+            "color": "#81C784"
+        },
+        {
+            "id": 1116095405671858376,
+            "svg": "./svg/green/logs",
+            "name": "LightBot логи",
+            "color": "#81C784"
+        },
+        {
+            "id": 1104785407163506728,
+            "svg": "./svg/green/radiation",
+            "name": "LightBot бета",
+            "color": "#81C784"
+        },
+        // Войсы
+        // Цвет: Серый Иконка: #E0E0E0 Текст: #9E9E9E
+        {
+            "id": 1015704816430882816,
+            "svg": "./svg/gray/switch",
+            "name": "Интерфейс",
+            "color": "#9E9E9E"
+        },
+        {
+            "id": 1015704814962880563,
+            "svg": "./svg/gray/add",
+            "name": "Создать войс",
+            "color": "#9E9E9E"
+        },
+        {
+            "id": 1102929801272098826,
+            "svg": "./svg/gray/sleeping",
+            "name": "Афк",
+            "color": "#9E9E9E"
+        },
+        // Категории
+        // Цвета: Цвета иконок
+        {
+            "id": 1015704813775896586,
+            "svg": "./svg/console",
+            "name": "Голосовые",
+            "color": "#E0E0E0"
+        },
+        {
+            "id": 1015578928179597373,
+            "svg": "./svg/console",
+            "name": "Модерация",
+            "color": "#BA68C8"
+        },
+        {
+            "id": 1016036681847156894,
+            "svg": "./svg/console",
+            "name": "Статистика",
+            "color": "#64B5F6"
+        },
+        {
+            "id": 1015571577330487296,
+            "svg": "./svg/console",
+            "name": "Информация",
+            "color": "#FFA726"
+        },
+        {
+            "id": 1015571353744715867,
+            "svg": "./svg/console",
+            "name": "Общение",
+            "color": "#FFFFFF"
+        },
+        {
+            "id": 1158403985921814548,
+            "svg": "./svg/console",
+            "name": "LightBot",
+            "color": "#8BC34A"
+        },
+        {
+            "id": 1198975336831004702,
+            "svg": "./svg/console",
+            "name": "Игровая",
+            "color": "#F44336"
+        },
+        {
+            "id": 1015576134626316310,
+            "svg": "./svg/console",
+            "name": "Другое",
+            "color": "#FFF59D"
+        },
+        // Игровая
+        // Цвет: Красный Иконка: #F44336 Текст: #E57373
+        {
+            "id": 1198975516078768160,
+            "svg": "./svg/red/text",
+            "name": "Слова",
+            "color": "#E57373"
+        },
+        {
+            "id": 1198975822678216724,
+            "svg": "./svg/red/count",
+            "name": "Считалка",
+            "color": "#E57373"
+        },
+        {
+            "id": 1198976336644026531,
+            "svg": "./svg/red/time",
+            "name": "6 часов чат",
+            "color": "#E57373"
+        },
+        {
+            "id": 1199032555404529765,
+            "svg": "./svg/red/note",
+            "name": "Заявки РП",
+            "color": "#E57373"
+        },
+        {
+            "id": 1198976532547391590,
+            "svg": "./svg/red/game",
+            "name": "РП",
+            "color": "#E57373"
+        },
+        {
+            "id": 1199032104546213898,
+            "svg": "./svg/red/18+",
+            "name": "РП (nsfw)",
+            "color": "#E57373"
+        },
+        // Другое
+        // Цвет: Желтый Иконка: #FFF59D Текст: #FFE082
+        {
+            "id": 1030894629312266321,
+            "svg": "./svg/yellow/bulb",
+            "name": "Идеи",
+            "color": "#FFE082"
+        },
+        {
+            "id": 1152973016985239633,
+            "svg": "./svg/yellow/shield_star",
+            "name": "Набор в модерацию",
+            "color": "#FFE082"
+        },
+        {
+            "id": 1031242016006340688,
+            "svg": "./svg/yellow/ad",
+            "name": "Авто партнёрство",
+            "color": "#FFE082"
+        },
+        // IdeaLight Beta
+        // Цвет: Светло красный Иконки: #FF8A80 Текст: #E57373
+        {
+            "id": 1167140443381846036,
+            "svg": "./svg/il_beta/rules",
+            "name": "Правила",
+            "color": "#E57373"
+        },
+        {
+            "id": 1167144896616992819,
+            "svg": "./svg/il_beta/spoilers",
+            "name": "Спойлеры",
+            "color": "#E57373"
+        },
+        {
+            "id": 1167144702894682175,
+            "svg": "./svg/il_beta/chat",
+            "name": "Чат",
+            "color": "#E57373"
+        },
+        {
+            "id": 1167862813423845456,
+            "svg": "./svg/il_beta/info",
+            "name": "Ресурсы",
+            "color": "#E57373"
+        },
+        {
+            "id": 1167858232409206954,
+            "svg": "./svg/il_beta/bot",
+            "name": "Чат бот",
+            "color": "#E57373"
+        }
+    ],
+    "settings": {
+        // Цвет: #dedede
+        "mute_icon": "./svg/main/mute",
+        "lock_icon": "./svg/main/lock"
+    }
+}
