--- a/generate.jsonc
+++ b/generate.jsonc
@@ -219,6 +219,12 @@
             "name": "Афк",
             "color": "#9E9E9E"
         },
+        {
+            "id": 1245002954826584064,
+            "svg": "./svg/gray/voice",
+            "name": "Общий",
+            "color": "#9E9E9E"
+        },
         // Категории
         // Цвета: Цвета иконок
         {
